app-1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
        monitoring: enabled # this is very important to have and will be discuessed later
    spec:
      containers:
        - name: app-1
          image: thejoud1997/app-1:latest
          ports:
            - containerPort: 3000
              name: http-metrics
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 128Mi
              cpu: 50m
