app-1/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-1-service
  namespace: app
  labels:
    app: app-1
    monitoring: enabled # this is very important to have and will be discuessed later
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http-metrics
      name: http-metrics
  selector:
    app: app-1
