app-1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app-1.minikube.local
      http:
        paths:
          - backend:
              service:
                name: app-1-service
                port:
                  number: 80
            path: /
            pathType: Prefix
